--- a/Final/templates/bio.html
+++ b/Final/templates/bio.html
@@ -28,7 +28,7 @@
 
 		  	<h2 id="fit2" class="bio"> My Team and I </h2>
 
-		  	<h3 id="fit" class="bio"> Hello there! I'm Ronny Ruiz, one of the artists for this small indie group with no name yet. From here you can see my <strong>team</strong> which consists of the three clowns on the right and my girlfriend and I on the right. All that aside, I am 19 years of age. Born and raised in new york, Hispanic American. I go to school at <i>The Borough of Manhattan Community College</i> and I major in <i>Animation and Motion Graphics</i>. I have a bunch of art here on this page and I will continue adding more and more art as time passes. I'm hoping this can become my portfolio for future jobs i may or may not partake in. My end goal for my career is to own my own small indie group alongside my friends making videogames. 
+		  	<h3 id="fit" class="bio"> Hello there! I'm Ronny Ruiz, one of the artists for this small indie group with no name yet. From here you can see my <strong>team</strong> which consists of the three clowns on the right and my girlfriend and I on the left and the last person is taking the photo. All that aside, I am 19 years of age. Born and raised in new york, Hispanic American. I go to school at <i>The Borough of Manhattan Community College</i> and I major in <i>Animation and Motion Graphics</i>. I have a bunch of art here on this page and I will continue adding more and more art as time passes. I'm hoping this can become my portfolio for future jobs I may or may not partake in. My end goal for my career is to own my own small indie group alongside my friends making videogames. 
 
 		</div>
 	</body>
